# openai-sdk

./: .gitignore  PYTHON_PREREQUISITES_FOR_AGENTS.md  practice_agent_implementation_checklist_open_ai_agents_sdk (2).md  quiz.md
Exam/: Certified Agentic AI & Robotics Engineering (CAARE) Program Guide.md
advance_agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
advance_agent/src/advance_agent/: __init__.py  cli.py  examples.py  main.py
advance_agent/src/advance_agent/agents/: base.py
advance_agent/src/advance_agent/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
advance_agent/src/advance_agent/guardrails/: base.py
advance_agent/src/advance_agent/hooks/: base.py
advance_agent/src/advance_agent/tools/: base.py
advance_agent/src/advance_agent/tracing/: base.py
advance_agent/src/advance_agent/workflows/: orchestrator.py
practice/: .env  EXERCISES_BASIC_TO_INTERMEDIATE.md  beginner_inter_practice.md  practice_agent_implementation_checklist_open_ai_agents_sdk (1).md  practice_questions.md  practice_questions_guide.md
practice/01_agent/: .gitignore  README.md  main.py  pyproject.toml
practice/02_agent/: config.py  main.py  pyproject.toml
practice/03_agent/: errors.md  main.py  pyproject.toml
practice/03_agent/agent/: advance_handsoff.py  advance_tools.py  doc_practice.py  first_agent.py  guardrails_agent.py  handsoff_lab.py  inout_guardrails.py  model_practice.py  pan_agent.py
practice/03_agent/config/: __init__.py  config.py
practice/03_agent/hooks/: agent_hooks.py
practice/03_agent/outputs/: output.md  runstream_output.md
practice/03_agent/runners/: first_agent_runner.py  model_practice_runner.py
practice/03_agent/tools/: simple_tools.py
practice/Adventure_bot/: .gitignore  README.md  requirements.txt  search_agent.py
practice/Adventure_bot/adventurebot/: config.py  gemini_config.py  gemini_patch.py  gemini_wrapper.py  litellm_proxy.py  main.py  manager.py  projectDescription.md
practice/Adventure_bot/adventurebot/agents/: __init__.py  kid_friendly_agent.py  kid_friendly_agent_no_web.py  recommender_agent.py  search_agent.py  search_agent_no_web.py  weather_agent.py
practice/Adventure_bot/adventurebot/tools/: context_tools.py
practice/Adventure_bot/adventurebot_advanced/: README.md  main.py  manager.py  models.py
practice/Adventure_bot/adventurebot_advanced/agents/: __init__.py  date_triage_agent.py  (+6 more)
pre-requisites/advance-python/: .env  pyproject.toml
pre-requisites/advance-python/src/advance_python/: __init__.py  generics_prac.py  pydantic_prac.py  typevar_prac.py
templates/: TEMPLATE_INDEX.md  pyproject.toml
templates/src/agents/: complete-agent-guide.py
templates/src/context/: complete-context-guide.py
templates/src/guardrails/: complete-guardrails-guide.py
templates/src/handoffs/: complete-handoffs-guide.py
templates/src/lifecycle_hooks/: complete-lifecycle-hooks-guide.py
templates/src/model-config/: Agent-level.py  Global-level.py  Runner-level.py
templates/src/runner/: complete-runner-guide.py
templates/src/sessions/: complete-sessions-guide.py
templates/src/streaming/: complete-streaming-guide.py
templates/src/structured-outputs/: complete-structured-outputs-guide.py
templates/src/templates/: __init__.py
templates/src/tools/: complete-tools-guide.py
(+1 files in other folders)
