[project]
name = "advance-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ShazilK47", email = "shazil.akn@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
advance-python = "advance_python:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
